Add universal server compatibility layer