@@ -4,18 +4,20 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import org.junit.jupiter.api.Test;
 
 class SyntheticVoxelRaycasterTest {
     @Test
     void fullWallOccludesTarget() {
-        List<Aabb> wall = List.of(new Aabb(2.0, 0.0, -1.0, 3.0, 3.0, 1.0));
+        List<Aabb> wall = Collections.singletonList(new Aabb(2.0, 0.0, -1.0, 3.0, 3.0, 1.0));
         assertTrue(SyntheticVoxelRaycaster.occluded(wall, 0.0, 1.62, 0.0, 5.0, 1.0, 0.0));
     }
 
     @Test
     void diagonalCornerDoesNotLeak() {
-        List<Aabb> corner = List.of(
+        List<Aabb> corner = Arrays.asList(
                 new Aabb(1.0, 0.0, 0.0, 2.0, 3.0, 3.0),
                 new Aabb(0.0, 0.0, 1.0, 3.0, 3.0, 2.0));
         assertTrue(SyntheticVoxelRaycaster.occluded(corner, 0.25, 1.62, 0.25, 2.5, 1.0, 2.5));
@@ -23,20 +25,20 @@ class SyntheticVoxelRaycasterTest {
 
     @Test
     void thinVoxelShapeStillOccludes() {
-        List<Aabb> pane = List.of(new Aabb(2.46875, 0.0, -1.0, 2.53125, 3.0, 1.0));
+        List<Aabb> pane = Collections.singletonList(new Aabb(2.46875, 0.0, -1.0, 2.53125, 3.0, 1.0));
         assertTrue(SyntheticVoxelRaycaster.occluded(pane, 0.0, 1.62, 0.0, 5.0, 1.62, 0.0));
     }
 
     @Test
     void slabBlocksLowRayButNotHighRay() {
-        List<Aabb> slab = List.of(new Aabb(2.0, 0.0, -1.0, 3.0, 0.5, 1.0));
+        List<Aabb> slab = Collections.singletonList(new Aabb(2.0, 0.0, -1.0, 3.0, 0.5, 1.0));
         assertTrue(SyntheticVoxelRaycaster.occluded(slab, 0.0, 0.25, 0.0, 5.0, 0.25, 0.0));
         assertFalse(SyntheticVoxelRaycaster.occluded(slab, 0.0, 1.62, 0.0, 5.0, 1.62, 0.0));
     }
 
     @Test
     void stairTestsEverySubBoxWithoutUsingItsEnclosingBounds() {
-        List<Aabb> stair = List.of(
+        List<Aabb> stair = Arrays.asList(
                 new Aabb(2.0, 0.0, -0.5, 3.0, 0.5, 0.5),
                 new Aabb(2.5, 0.5, -0.5, 3.0, 1.0, 0.5));
         assertTrue(SyntheticVoxelRaycaster.occluded(
@@ -47,7 +49,7 @@ class SyntheticVoxelRaycasterTest {
 
     @Test
     void thinLadderOrSignOutlinePlaneIsNotExpandedToFullBlock() {
-        List<Aabb> thinPlane = List.of(new Aabb(2.0, 0.0, 0.875, 3.0, 2.0, 1.0));
+        List<Aabb> thinPlane = Collections.singletonList(new Aabb(2.0, 0.0, 0.875, 3.0, 2.0, 1.0));
         assertTrue(SyntheticVoxelRaycaster.occluded(
                 thinPlane, 2.5, 1.0, 0.0, 2.5, 1.0, 2.0));
         assertFalse(SyntheticVoxelRaycaster.occluded(
@@ -58,11 +60,11 @@ class SyntheticVoxelRaycasterTest {
     void transparentShapePassesBeforeLaterOpaqueShape() {
         Aabb glass = new Aabb(1.0, 0.0, -1.0, 1.0625, 3.0, 1.0);
         Aabb wall = new Aabb(3.0, 0.0, -1.0, 4.0, 3.0, 1.0);
-        List<Aabb> shapes = List.of(glass, wall);
+        List<Aabb> shapes = Arrays.asList(glass, wall);
         assertTrue(SyntheticVoxelRaycaster.occluded(
                 shapes, shape -> shape != glass, 0.0, 1.62, 0.0, 5.0, 1.62, 0.0));
         assertFalse(SyntheticVoxelRaycaster.occluded(
-                List.of(glass), shape -> shape != glass,
+                Collections.singletonList(glass), shape -> shape != glass,
                 0.0, 1.62, 0.0, 5.0, 1.62, 0.0));
     }
 }
